--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ plugins {
 
 android {
     namespace 'com.example.alarmclock'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.alarmclock"
@@ -73,6 +73,11 @@ dependencies {
 
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+
+    //Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:2.7.2"
+    implementation "androidx.navigation:navigation-ui-ktx:2.7.2"
+    implementation "androidx.navigation:navigation-compose:2.7.2"
 
     //Core
     implementation 'androidx.core:core-ktx:1.8.0'
