--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,10 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.7.2"
     implementation "androidx.navigation:navigation-ui-ktx:2.7.2"
     implementation "androidx.navigation:navigation-compose:2.7.2"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
+    //collectAsStateWithLifecycle API
+    implementation"androidx.lifecycle:lifecycle-runtime-compose:2.7.0-alpha02"
 
     //Core
     implementation 'androidx.core:core-ktx:1.8.0'
